Modificacion de text-align en clase correcta

--- a/css/styles.css
+++ b/css/styles.css
@@ -490,6 +490,10 @@ a, p, h1, h2, h3, h4, h5, h6 {
     color: #004aad;
 }
 
+.titulo_sobre_nosotros{
+    text-align: center;
+}
+
 .titulo_sobre_nosotros h1{
     text-align: center;
     font-size: 30px;
